--- a/_posts/2019-04-29-Office最新版下载地址.md
+++ b/_posts/2019-04-29-Office最新版下载地址.md
@@ -8,4 +8,5 @@ tags:
 author: 'lyk'
 ---
 ## 官网下载
-如果你有office正版密钥，建议打开微软官方站点添加密钥到自己的微软账户，以后https://setup.office.com/
+如果你有office正版密钥，建议打开微软官方站点添加密钥到自己的微软账户，以后重装也非常方便
+> [https://setup.office.com/](https://setup.office.com/)
