--- a/_posts/2019-04-29-Office最新版下载地址.md
+++ b/_posts/2019-04-29-Office最新版下载地址.md
@@ -11,3 +11,6 @@ author: 'lyk'
 如果你有office正版密钥，建议打开微软官方站点添加密钥到自己的微软账户，以后重装也非常方便
 > [https://setup.office.com/](https://setup.office.com/)
 ![](https://up.go28.cn/pimg/20190428222023.png!960)
+重新安装下载地址
+https://setup.office.com/home/getoffice
+
