--- a/_posts/2019-04-29-Office最新版下载地址.md
+++ b/_posts/2019-04-29-Office最新版下载地址.md
@@ -8,7 +8,8 @@ tags:
 author: 'lyk'
 ---
 ## 官网下载
-### Office个人版及
+首先确认你
+### Office个人版及家庭版（）
 如果你有office正版密钥，建议打开微软官方站点添加密钥到自己的微软账户，以后重装也非常方便,只需打开这个网站登录就可以了
 > [https://setup.office.com/](https://setup.office.com/)
 ![](https://up.go28.cn/pimg/20190428222023.png!960)
