--- a/_posts/2019-04-29-Office最新版下载地址.md
+++ b/_posts/2019-04-29-Office最新版下载地址.md
@@ -7,7 +7,7 @@ tags:
      - Onedrive
 author: 'lyk'
 ---
-## 官网下载
+## office PC版官网下载
 ### Office个人版及家庭版（微软个人账户）
 如果你有office正版密钥，建议打开微软官方站点添加密钥到自己的微软账户，以后重装也非常方便,只需打开这个网站登录就可以了
 > [https://setup.office.com/](https://setup.office.com/)
