--- a/_posts/2019-04-29-Office最新版下载地址.md
+++ b/_posts/2019-04-29-Office最新版下载地址.md
@@ -14,4 +14,5 @@ author: 'lyk'
 ### Office365教育版及企业版
 > [https://portal.office.com/OLS/MySoftware.aspx](https://portal.office.com/OLS/MySoftware.aspx)
 ## MAC版Office下载
-Office365 
+苹果电脑已经支持从应用商店下载
+[Office365](https://itunes.apple.com/cn/app-bundle/id1450038993) 
