--- a/_posts/2019-04-29-Office最新版下载地址.md
+++ b/_posts/2019-04-29-Office最新版下载地址.md
@@ -8,7 +8,7 @@ tags:
 author: 'lyk'
 ---
 ## PC版官网下载
-> Office Online支持浏览器使用Word、PPT、
+> Office Online支持浏览器使用Word、Excel、PPT等应用，不限设备，并且支持强大的团队协作，推荐使用Office365
 ### Office个人版及家庭版（微软个人账户）
 如果你有office正版密钥，建议打开微软官方站点添加密钥到自己的微软账户，以后重装也非常方便,只需打开这个网站登录就可以了
 > [https://setup.office.com/](https://setup.office.com/)
