--- a/_posts/2019-04-29-Office最新版下载地址.md
+++ b/_posts/2019-04-29-Office最新版下载地址.md
@@ -1,14 +1,15 @@
 ---
 layout: post
-title: '免费注册微软Office365教育版OneDrive网盘5t空间'
-date: '2019-04-27'
+title: 'Office最新版下载地址'
+date: '2019-04-29'
 tags:
      - Office
      - Onedrive
 author: 'lyk'
 ---
-## PC版官网下载
-> Office Online支持浏览器使用Word、Excel、PPT等应用，不限设备，并且支持强大的团队协作，推荐使用[Office365教育版](Office365教育版)或者企业版使用,点击使用[Office.com](https://www.office.com)
+## 官网下载
+> Office Online支持浏览器使用Word、Excel、PPT等应用，不限设备，并且支持强大的团队协作，推荐使用[Office365教育版](https://lykqq.com/2019/04/27/Office-%E6%B3%A8%E5%86%8C%E6%95%99%E8%82%B2%E7%89%88Office365/)或者企业版使用,点击使用[Office.com](https://www.office.com)
+> 
 
 ### Office个人版及家庭版（微软个人账户）
 如果你有office正版密钥，建议打开微软官方站点添加密钥到自己的微软账户，以后重装也非常方便,只需打开这个网站登录就可以了
