--- a/_posts/2019-04-29-Office最新版下载地址.md
+++ b/_posts/2019-04-29-Office最新版下载地址.md
@@ -12,7 +12,7 @@ author: 'lyk'
 > 替代方案，Office服务器在国外，有时访问可能不是太顺畅，可以使用石墨[https://shimo.im](https://shimo.im/?inviterid=91054&invitername=%E9%A3%9B%E6%9D%8B)
 
 ### Office个人版及家庭版（微软个人账户）
-如果你有office正版密钥，建议打开微软官方站点添加密钥到自己的微软账户，以后重装也非常方便,只需打开这个网站登录就可以了
+如果你有office正版密钥，打开微软官方站点添加密钥到自己的微软账户，以后重装也非常方便,只需打开这个网站登录就可以了
 > [https://setup.office.com/](https://setup.office.com/)
 ### Office365教育版及企业版
 > [https://portal.office.com/OLS/MySoftware.aspx](https://portal.office.com/OLS/MySoftware.aspx)
@@ -21,3 +21,4 @@ author: 'lyk'
 
 [Office365](https://itunes.apple.com/cn/app-bundle/id1450038993) |[Word](https://itunes.apple.com/cn/app/id462054704)|[Excel](https://itunes.apple.com/cn/app/id462058435)|[PowerPoint](https://itunes.apple.com/cn/app/id462062816)|[Outlook](https://itunes.apple.com/cn/app/id985367838)|[Onenote](https://itunes.apple.com/cn/app/id784801555)|[Onedrive](https://itunes.apple.com/cn/app/id823766827)
 |-|-|-|-|-|-|-|
+
