--- a/_posts/2019-04-29-Office最新版下载地址.md
+++ b/_posts/2019-04-29-Office最新版下载地址.md
@@ -22,3 +22,5 @@ author: 'lyk'
 [Office365](https://itunes.apple.com/cn/app-bundle/id1450038993) |[Word](https://itunes.apple.com/cn/app/id462054704)|[Excel](https://itunes.apple.com/cn/app/id462058435)|[PowerPoint](https://itunes.apple.com/cn/app/id462062816)|[Outlook](https://itunes.apple.com/cn/app/id985367838)|[Onenote](https://itunes.apple.com/cn/app/id784801555)|[Onedrive](https://itunes.apple.com/cn/app/id823766827)
 |-|-|-|-|-|-|-|
 
+## Windows平板Office
+>10寸一下免费使用
