--- a/_posts/2019-04-29-Office最新版下载地址.md
+++ b/_posts/2019-04-29-Office最新版下载地址.md
@@ -25,5 +25,5 @@ author: 'lyk'
 ## Windows平板Office
 >10寸一下手机和平板免费使用
 
-[Word](https://go.microsoft.com/fwlink/p/?LinkID=619261)|[Excel](https://go.microsoft.com/fwlink/p/?LinkID=619262)|[PowerPoint](https://go.microsoft.com/fwlink/p/?LinkID=619265)|[Outlook](https://go.microsoft.com/fwlink/p/?LinkID=627385)|[Onenote](https://go.microsoft.com/fwlink/p/?LinkId=393565)|[Onedrive](https://go.microsoft.com/fwlink/p/?LinkID=386408)|[Skype](https://go.microsoft.com/fwlink/p/?LinkID=386409)
+[Word](https://go.microsoft.com/fwlink/p/?LinkID=619261)|[Excel](https://go.microsoft.com/fwlink/p/?LinkID=619262)|[PowerPoint](https://go.microsoft.com/fwlink/p/?LinkID=619265)|[Outlook](https://go.microsoft.com/fwlink/p/?LinkID=627385)|[Onenote](https://go.microsoft.com/fwlink/p/?LinkId=393565)|[Onedrive](https://go.microsoft.com/fwlink/p/?LinkID=386408)|[Skype](https://go.microsoft.com/fwlink/p/?LinkID=386409)|[Office](https://go.microsoft.com/fwlink/p/?LinkID=826035)
 |-|-|-|-|-|-|-|
