--- a/_posts/2019-04-29-Office最新版下载地址.md
+++ b/_posts/2019-04-29-Office最新版下载地址.md
@@ -35,5 +35,5 @@ author: 'lyk'
 
 ## 安卓版Office
 
-[Office三合一](链接)|[Word](http://go.microsoft.com/fwlink/p/?LinkID=624783)|[Excel](http://go.microsoft.com/fwlink/p/?LinkID=624784)|[PowerPoint](http://go.microsoft.com/fwlink/p/?LinkID=624785)|[Outlook](http://go.microsoft.com/fwlink/p/?LinkID=624786)|[Onenote](https://go.microsoft.com/fwlink/p/?LinkID=624787)|[Onedrive](https://go.microsoft.com/fwlink/p/?LinkID=386416)|[Office Lens](https://go.microsoft.com/fwlink/p/?LinkID=826035)
+[Office三合一](https://aka.ms/officemobile_android)|[Word](http://aka.ms/wordApk)|[Excel](http://aka.ms/excelApk)|[PowerPoint](http://go.microsoft.com/fwlink/p/?LinkID=624785)|[Outlook](http://go.microsoft.com/fwlink/p/?LinkID=624786)|[Onenote](https://go.microsoft.com/fwlink/p/?LinkID=624787)|[Onedrive](https://go.microsoft.com/fwlink/p/?LinkID=386416)|[Office Lens](https://go.microsoft.com/fwlink/p/?LinkID=826035)
 |-|-|-|-|-|-|-|
