--- a/_posts/2019-04-29-Office最新版下载地址.md
+++ b/_posts/2019-04-29-Office最新版下载地址.md
@@ -35,5 +35,5 @@ author: 'lyk'
 
 ## 安卓版Office
 
-[Office三合一](https://aka.ms/officemobile_android)|[Word](http://aka.ms/wordApk)|[Excel](http://aka.ms/excelApk)|[PowerPoint](http://aka.ms/pptApk)|[Outlook](https://sj.qq.com/myapp/detail.htm?apkName=com.microsoft.office.outlook)|[Onenote](http://aka.ms/onenoteapk)|[Onedrive](https://go.microsoft.com/fwlink/p/?LinkID=386416)|[Office Lens](https://go.microsoft.com/fwlink/p/?LinkID=826035)
+[Office三合一](https://aka.ms/officemobile_android)|[Word](http://aka.ms/wordApk)|[Excel](http://aka.ms/excelApk)|[PowerPoint](http://aka.ms/pptApk)|[Outlook](https://sj.qq.com/myapp/detail.htm?apkName=com.microsoft.office.outlook)|[Onenote](http://aka.ms/onenoteapk)|[Onedrive](https://sj.qq.com/myapp/detail.htm?apkName=com.microsoft.skydrive)|[Office Lens](https://sj.qq.com/myapp/detail.htm?apkName=com.microsoft.office.officelens)
 |-|-|-|-|-|-|-|
