--- a/_posts/2019-04-29-Office最新版下载地址.md
+++ b/_posts/2019-04-29-Office最新版下载地址.md
@@ -37,3 +37,5 @@ author: 'lyk'
 
 [Office三合一](https://aka.ms/officemobile_android)|[Word](http://aka.ms/wordApk)|[Excel](http://aka.ms/excelApk)|[PowerPoint](http://aka.ms/pptApk)|[Outlook](https://sj.qq.com/myapp/detail.htm?apkName=com.microsoft.office.outlook)|[Onenote](http://aka.ms/onenoteapk)|[Onedrive](https://sj.qq.com/myapp/detail.htm?apkName=com.microsoft.skydrive)|[Office Lens](https://sj.qq.com/myapp/detail.htm?apkName=com.microsoft.office.officelens)
 |-|-|-|-|-|-|-|-|
+
+> (本文下载地址均为官方版，每次下载都是最新版)
